<resources>
    <string name="app_name">PADC-Nevigation</string>
    <string name="action_settings">Settings</string>
    <string name="left_menu_linkedIn">PADC-LinkedIn</string>
    <string name="left_menu_pulse">PADC-Pulse</string>
    <string name="left_menu_movie">PADC-ရုပ်ရှင်</string>
    <string name="left_menu_job_search">PADC-JobSearch</string>
    <string name="left_menu_winzin">PADC-၀န်ဇင်း</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_linkedin">PADC-LinkedIn</string>
    <string name="title_jobSearch">PADC-JobSearch</string>
    <string name="title_pulse">PADC-Pulse</string>
    <string name="title_movie">PADC-ရုပ္ရွင္</string>
    <string name="title_winzin">PADC-၀န္ဇင္း</string>
</resources>
